tests/NormalTests/paczka1/fuzzy1/66116572.err
Error in line 6: nHhX1fWC A188 58,9
Error in line 10: WLL8IZy S31 375,17
Error in line 3: A188 A928 100,0
Error in line 4: WLL8IZy S31 83,3
Error in line 32: nHhX1fWC A661 50,2
Error in line 30: A188 S31 7,4
Error in line 29: JDwiORhQlS A661 82,8
